//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table user {
  id String [pk]
  phone String [unique, not null]
  email String [unique, not null]
  password String [not null]
  role Role [not null, default: 'CASHIER']
  employee employee
  transactions transaction [not null]
}

Table employee {
  id String [pk]
  user_id String [unique, not null]
  user_info user [not null]
  address String [not null]
  birth_date DateTime [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Table category_product {
  id String [pk]
  name String [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  Products product [not null]
}

Table product {
  id String [pk]
  name String [not null]
  price Float [not null]
  images String
  cat_product_id String
  cat_product_detail category_product
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  TransactionDetails transaction_details [not null]
}

Table transaction {
  id String [pk]
  cashier_id String [not null]
  cashier_info user [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  name_customer String [not null]
  payment_method_name String [not null]
  total_transactions Float [not null]
  pay Float [not null]
  transaction_details transaction_details [not null]
}

Table transaction_details {
  id String [pk]
  product_id String
  product_info product
  quantity Int [not null]
  name String [not null]
  price Float [not null]
  image String
  category String [not null]
  transaction_id String [not null]
  transaction_info transaction [not null]
}

Enum Role {
  ADMIN
  CASHIER
}

Ref: employee.user_id - user.id

Ref: product.cat_product_id > category_product.id

Ref: transaction.cashier_id > user.id

Ref: transaction_details.product_id > product.id

Ref: transaction_details.transaction_id > transaction.id